@@ -992,7 +992,6 @@ MPI_Ibsend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
     SCOREP_IN_MEASUREMENT_INCREMENT();
     const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
     const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_P2P );
-    const int           xnb_active                 = ( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK );
     int                 return_val;
     SCOREP_MpiRequestId reqid;
 
@@ -1009,16 +1008,8 @@ MPI_Ibsend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
             if ( dest != MPI_PROC_NULL )
             {
                 PMPI_Type_size( datatype, &sz );
-                if ( xnb_active )
-                {
-                    SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                     tag, ( uint64_t )count * sz, reqid );
-                }
-                else
-                {
-                    SCOREP_MpiSend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                    tag, ( uint64_t )count * sz );
-                }
+                SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
+                                 tag, ( uint64_t )count * sz, reqid );
             }
         }
         else if ( SCOREP_IsUnwindingEnabled() )
@@ -1035,7 +1026,7 @@ MPI_Ibsend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
     {
         if ( event_gen_active_for_group )
         {
-            if ( xnb_active && dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
+            if ( dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
             {
                 scorep_mpi_request_p2p_create( *request, SCOREP_MPI_REQUEST_TYPE_SEND, SCOREP_MPI_REQUEST_FLAG_NONE,
                                                tag, dest, ( uint64_t )count * sz, datatype, comm, reqid );
@@ -1080,7 +1071,6 @@ MPI_Irsend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
     SCOREP_IN_MEASUREMENT_INCREMENT();
     const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
     const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_P2P );
-    const int           xnb_active                 = ( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK );
     int                 return_val;
     SCOREP_MpiRequestId reqid;
 
@@ -1097,16 +1087,8 @@ MPI_Irsend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
             if ( dest != MPI_PROC_NULL )
             {
                 PMPI_Type_size( datatype, &sz );
-                if ( xnb_active )
-                {
-                    SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                     tag, ( uint64_t )count * sz, reqid );
-                }
-                else
-                {
-                    SCOREP_MpiSend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                    tag, ( uint64_t )count * sz );
-                }
+                SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
+                                 tag, ( uint64_t )count * sz, reqid );
             }
         }
         else if ( SCOREP_IsUnwindingEnabled() )
@@ -1123,7 +1105,7 @@ MPI_Irsend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
     {
         if ( event_gen_active_for_group )
         {
-            if ( xnb_active && dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
+            if ( dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
             {
                 scorep_mpi_request_p2p_create( *request, SCOREP_MPI_REQUEST_TYPE_SEND, SCOREP_MPI_REQUEST_FLAG_NONE,
                                                tag, dest, ( uint64_t )count * sz, datatype, comm, reqid );
@@ -1168,7 +1150,6 @@ MPI_Isend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, in
     SCOREP_IN_MEASUREMENT_INCREMENT();
     const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
     const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_P2P );
-    const int           xnb_active                 = ( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK );
     int                 return_val;
     SCOREP_MpiRequestId reqid;
 
@@ -1185,16 +1166,8 @@ MPI_Isend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, in
             if ( dest != MPI_PROC_NULL )
             {
                 PMPI_Type_size( datatype, &sz );
-                if ( xnb_active )
-                {
-                    SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                     tag, ( uint64_t )count * sz, reqid );
-                }
-                else
-                {
-                    SCOREP_MpiSend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                    tag, ( uint64_t )count * sz );
-                }
+                SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
+                                 tag, ( uint64_t )count * sz, reqid );
             }
         }
         else if ( SCOREP_IsUnwindingEnabled() )
@@ -1211,7 +1184,7 @@ MPI_Isend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, in
     {
         if ( event_gen_active_for_group )
         {
-            if ( xnb_active && dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
+            if ( dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
             {
                 scorep_mpi_request_p2p_create( *request, SCOREP_MPI_REQUEST_TYPE_SEND, SCOREP_MPI_REQUEST_FLAG_NONE,
                                                tag, dest, ( uint64_t )count * sz, datatype, comm, reqid );
@@ -1256,7 +1229,6 @@ MPI_Issend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
     SCOREP_IN_MEASUREMENT_INCREMENT();
     const int           event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
     const int           event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_P2P );
-    const int           xnb_active                 = ( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK );
     int                 return_val;
     SCOREP_MpiRequestId reqid;
 
@@ -1273,16 +1245,8 @@ MPI_Issend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
             if ( dest != MPI_PROC_NULL )
             {
                 PMPI_Type_size( datatype, &sz );
-                if ( xnb_active )
-                {
-                    SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                     tag, ( uint64_t )count * sz, reqid );
-                }
-                else
-                {
-                    SCOREP_MpiSend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
-                                    tag, ( uint64_t )count * sz );
-                }
+                SCOREP_MpiIsend( dest, SCOREP_MPI_COMM_HANDLE( comm ),
+                                 tag, ( uint64_t )count * sz, reqid );
             }
         }
         else if ( SCOREP_IsUnwindingEnabled() )
@@ -1299,7 +1263,7 @@ MPI_Issend( SCOREP_MPI_CONST_DECL void* buf, int count, MPI_Datatype datatype, i
     {
         if ( event_gen_active_for_group )
         {
-            if ( xnb_active && dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
+            if ( dest != MPI_PROC_NULL && return_val == MPI_SUCCESS )
             {
                 scorep_mpi_request_p2p_create( *request, SCOREP_MPI_REQUEST_TYPE_SEND, SCOREP_MPI_REQUEST_FLAG_NONE,
                                                tag, dest, ( uint64_t )count * sz, datatype, comm, reqid );
@@ -1352,7 +1316,6 @@ MPI_Irecv( void*        buf,
     SCOREP_IN_MEASUREMENT_INCREMENT();
     const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
     const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_P2P );
-    const int xnb_active                 = ( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK );
     int       return_val;
     uint64_t  start_time_stamp;
 
@@ -1380,7 +1343,7 @@ MPI_Irecv( void*        buf,
         int                 sz;
         PMPI_Type_size( datatype, &sz );
 
-        if ( event_gen_active_for_group && xnb_active )
+        if ( event_gen_active_for_group )
         {
             SCOREP_MpiIrecvRequest( reqid );
         }
