@@ -128,20 +128,18 @@ static void
 deprecate_xnonblock( void )
 {
     /* Plan for future versions:
-     * 8.0:  Deprecate disabling extended non-blocking comm events
-     *       - warn if a measurement is run with SCOREP_MPI_ENABLED_XNONBLOCK==false
-     * >8.0: Only support extended non-blocking comm events
-     *       - remove the 'xnonblock' group from the 'default' and 'all' presets
-     *       - warn if the 'xnonblock' group is given explicitly (does nothing anymore)
+     * 9.0: Issue a deprecation warning when the 'xnonblock' flag is given.
+     *      Extended non-blocking communication event are always enabled
+     * >9.0: Remove the flag entirely and make it an error.
      */
-    if ( !( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK ) )
+    if ( scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK )
     {
         int rank;
         PMPI_Comm_rank( MPI_COMM_WORLD, &rank );
         if ( rank == 0 )
         {
-            UTILS_DEPRECATED( "Running a measurement without extended non-blocking communication events.\n"
-                              "To enable extended non-blocking comm events, include 'xnonblock' in SCOREP_MPI_ENABLE_GROUPS or use one of the presets 'default' or 'all'.\n" );
+            UTILS_DEPRECATED( "Including the 'xnonblock' flag in SCOREP_MPI_ENABLE_GROUPS is deprecated and has no effect.\n"
+                              "Extended non-blocking communication events are always enabled.\n" );
         }
     }
 }
