@@ -196,7 +196,6 @@ int MPI_Irecv(void* buf,
   SCOREP_IN_MEASUREMENT_INCREMENT();
   const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
   const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR(SCOREP_MPI_ENABLED_P2P);
-  const int xnb_active                 = (scorep_mpi_enabled & SCOREP_MPI_ENABLED_XNONBLOCK);
   int       return_val;
   uint64_t  start_time_stamp;
 
@@ -224,8 +223,10 @@ int MPI_Irecv(void* buf,
     int sz;
     PMPI_Type_size(datatype, &sz);
 
-    if (event_gen_active_for_group && xnb_active)
+    if (event_gen_active_for_group)
+    {
       SCOREP_MpiIrecvRequest(reqid);
+    }
 
     scorep_mpi_request_p2p_create(*request, SCOREP_MPI_REQUEST_TYPE_RECV, SCOREP_MPI_REQUEST_FLAG_NONE,
                        tag, 0, (uint64_t)count * sz, datatype, comm, reqid);
